# Distributed-filesystemHaskell

./: Dockerfile  README.md  Thumbs.db  all_env.env  clean_docker.sh  commands.txt  config.json  create_fileservers.py  mongo_test.py  start.sh
.env/: pip-selfcheck.json
.env/include/: python3.6m
.env/lib/python3.6/: _bootlocale.py  _collections_abc.py  _dummy_thread.py  _weakrefset.py  base64.py  codecs.py  copy.py  enum.py  fnmatch.py  functools.py  genericpath.py  heapq.py  imp.py  importlib  io.py  lib-dynload  linecache.py  locale.py  ntpath.py  operator.py  posixpath.py  sre_compile.py  token.py  types.py  weakref.py
auth-server/: auth-server.cabal  docker-compose.yml  log.out  nohup.out  stack.yaml
auth-server/.stack-work/docker/_home/: .ssh
auth-server/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.12/8.0.1/flag-cache/: auth-server-0.1.0.0-LHjSYKct00aD4WQY3RKNIZ  bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0  filesystem-api-0.1.0.0-L4ARZdsQ0XfBKYj0kBLWDj  http-api-data-0.3.2-A22DPUhAmUlrIoBZ4qkGB  servant-0.9.1.1-JzVvK9yk6sQ1E4UZympEK1  servant-client-0.9.1.1-Jfbv4D3w2K1d9wGI5VTz3  servant-server-0.9.1.1-9171CElIoTq4wzgmteNLu3
auth-server/.stack-work/install/x86_64-linux-dkda49f7ca9b244180d3cfb1987cbc9743/lts-7.12/8.0.1/pkgdb/: auth-server-0.1.0.0-LHjSYKct00aD4WQY3RKNIZ.conf  bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0.conf  filesystem-api-0.1.0.0-L4ARZdsQ0XfBKYj0kBLWDj.conf  http-api-data-0.3.2-A22DPUhAmUlrIoBZ4qkGB.conf  package.cache  servant-0.9.1.1-JzVvK9yk6sQ1E4UZympEK1.conf  servant-client-0.9.1.1-Jfbv4D3w2K1d9wGI5VTz3.conf  servant-server-0.9.1.1-9171CElIoTq4wzgmteNLu3.conf
auth-server/src/: Lib.hs
base_dockercompose/: base_fileserver.yml
client/: client.cabal  docker-compose.yml  nohup.out  stack.yaml  trace.txt
client/src/: Helpers.hs  Lib.hs
directoryservice/: directoryservice.cabal  docker-compose.yml  log.out  nohup.out  stack.yaml
directoryservice/app/: Main.hs
directoryservice/src/: Lib.hs
docker_files/: Dockerfile
fileserver/: docker-compose.yml  fileserver.cabal  log.out  nohup.out  stack.yaml
fileserver/src/: Lib.hs
filesystem-api/: filesystem-api.cabal
filesystem-api/src/: Datatypes.hs  EncryptionAPI.hs  FilesystemAPI.hs  FilesystemAPIClient.hs  FilesystemAPIServer.hs
lockService/: README.md  docker-compose.yml  lockService.cabal  log.out  nohup.out  stack.yaml
lockService/.stack-work/install/x86_64-linux/lts-7.10/8.0.1/flag-cache/: Cabal-1.24.1.0-IrwQRxLtBmMIrR1JspkXtd  DRBG-0.5.5-8bb72Z4ll6NCO7HwSjNk69  MonadRandom-0.4.2.3-8TfCm6PGvGYB7omozORhov  RSA-2.2.0-EHQUhJZHM7hLOJkF4fZ4IR  SHA-1.6.4.2-GSP9nhHyWNEAImBrL9QfXp  aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  aeson-pretty-0.8.2-FONEppYcAcNL67yNmD5AQ1  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  asn1-encoding-0.9.4-2Zu5ldLYD571Aw26w0CWF6  asn1-parse-0.9.4-Ai83ACtrOir9VlSOQtWm2F  asn1-types-0.3.2-4Rz223aP8OG6vnHYiLX5Ab  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base16-bytestring-0.1.1.6-5dPoF8dzhwzBaEB2MvnmIS  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  bcrypt-0.0.10-KkRprUlvO3PF3R9Ch3yyKT  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  blaze-html-0.8.1.2-2kD96kJB6JEGow1dP8IL6C  blaze-markup-0.7.1.0-5a5pBG0fO8kJX4ke3K7j3D  bson-0.3.2.3-3QA3aP5EtCyCltXUzEKOsQ  (+110 more)
lockService/src/: Lib.hs
python_version/: requirements.txt
python_version/.env/lib/python3.6/: __future__.py  abc.py  bisect.py  collections  config-3.6m-x86_64-linux-gnu  copyreg.py  encodings  hashlib.py  hmac.py  keyword.py  orig-prefix.txt  os.py  random.py  re.py  reprlib.py  rlcompleter.py  shutil.py  sre_constants.py  sre_parse.py  stat.py  struct.py  tarfile.py  tempfile.py  tokenize.py  warnings.py
python_version/docker_files/: docker-compose.yml
python_version/servers/: file_server.py  helper.py  lock_server.py
servers/: AESCipher.py  auth_server.py  directory_server.py  file_server.py
tests/: test_basic.py
transactionservice/: .gitignore  ChangeLog.md  README.md  docker-compose.yml  log.out  package.yaml  stack.yaml  transactionservice.cabal
transactionservice/app/: Main.hs
transactionservice/src/: Lib.hs
(+81 files in other folders)
