name:                directoryservice
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/directoryservice#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Jibin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , servant-client
                     , transformers
                     , wai
                     , warp
                     , wai-logger
                     , mongoDB
                     , hslogger
                     , time
                     , resourcet
                     , text
                     , bytestring
                     , bson
                     , bson-generic
                     , mtl
                     , http-client
                     , attoparsec
                     , string-conversions
                     , http-media
                     , directory
                     , blaze-html
                     , blaze-markup
                     , either
                     , lucid
                     , bcrypt
                     , warp-tls
                     , filesystem-api
                     , random
  default-language:    Haskell2010

executable directoryservice-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directoryservice
  default-language:    Haskell2010

test-suite directoryservice-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , directoryservice
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/directoryservice
