name:                filesystem-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/username/filesystem-api#readme
license:             BSD3
license-file:        LICENSE
author:              Jibin
maintainer:          Jibin
copyright:           2017
category:            test
build-type:          Simple 
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , FilesystemAPI
                     , FilesystemAPIClient
                     , FilesystemAPIServer
                     , EncryptionAPI
                     , Datatypes
  build-depends:       base >= 4.7 && < 5
                      , aeson
                        , servant
                        , servant-server
                        , servant-client
                        , transformers
                        , wai
                        , warp
                        , wai-logger
                        , mongoDB
                        , hslogger
                        , time
                        , bson-generic
                        , resourcet
                        , text
                        , bytestring
                        , bson
                        , mtl
                        , http-client
                        , bcrypt
                        , random
                        , RSA
                        , cipher-aes
                        , crypto-api
                        , cryptohash
                        , DRBG
                        , utf8-string
                        , process
                        , ghc


  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/username/filesystem-api
